# hotspot

./: .gitignore  CNAME  GIT_COMMIT_STANDARD.md  LICENSE  README.md  config.toml  deploy.bat  index.html  pyproject.toml  report.json
.github/workflows/: hotspot.yml
2026-06-30/122317/: report.html  report.json
2026-06-30/122744/: report.html  report.json
2026-06-30/130846/: report.json
2026-06-30/131915/: report.html  report.json
2026-06-30/132423/: report.html  report.json
2026-06-30/133359/: report.html  report.json
2026-06-30/133734/: report.html  report.json
2026-06-30/134712/: report.html
2026-06-30/134752/: report.json
2026-06-30/135139/: report.html  report.json
2026-07-01/185458/: DeepSeek.json  report.html  report.json
2026-07-01/191040/: DeepSeek.json  report.html
2026-07-01/192134/: ChatGPT.json  Claude Code.json  Cloudflare.json  DeepSeek.json  Docker.json  GitHub.json  Go.json  Kubernetes.json  Next.js.json  Node.js.json  OpenAI.json  Python.json  React.json  Rust.json  SpringBoot.json  TypeScript.json  Vue.js.json  report.html  report.json  人工智能.json  前端技术.json  数据库.json
2026-07-02/095548/: report.html  report.json
2026-07-02/100212/: report.html  report.json
2026-07-02/100330/: report.html  report.json
2026-07-02/100335/: report.html  report.json
2026-07-02/100409/: report.html  report.json
2026-07-02/100614/: report.html  report.json
hotspot/: __init__.py  __main__.py  cli.py  config.json  deepseek.py  deepseek_pow.py  hotspotter.py  models.py  template.html
tool/: browser.py  exceptions.py  response.py
(+125 files in other folders)
